<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="160dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drugstore"
            android:id="@+id/text_string_drugstore"

            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:id="@+id/text_name"
            android:layout_marginLeft="5dp"

            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/text_string_address"

            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:layout_marginLeft="5dp"
            android:id="@+id/text_address"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/text_string_phone"

            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="New Text"
            android:id="@+id/text_phone"

            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/schedule"
                android:id="@+id/text_string_schedule"

                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="New Text"
                android:id="@+id/text_schedule_start"

                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/to"

                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="New Text"
                android:id="@+id/text_schedule_end"

                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/text_town_name"

            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle.Inverse"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/ic_share_grey600_24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>